@@ -5,6 +5,7 @@
 2013-03-29  Fabian Buske	v0.1.3
 	- bash shell compatibility improved
 	- script name conflict resolved
+	- default output processing set to serial mode 
 
 2012-07-24  Fabian Buske	v0.1.2
 	- Version number of dependend programs reported in log
